--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,9 @@
 
 	{% if status %}
 	  <br> <br>
-	{% if shortend_url %}
+		{% if shortend_url %}
 	  <h2>Shortend URL : <a href={{shortend_url}}>{{shortend_url}}</a></h2>
+		{% endif %}
 	{% else %}
 		<h2>{{ data }}</h2>
 	{% endif %}
