changes to reflect in K8S

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <div style="text-align: center;">
     
           <div style="text-align: center;padding-bottom: 40px;padding-top: 40px;"> 
-              <h1 style="color: blue;">Shorten URL</h1>
+              <h1 style="color: red;">Shorten URL</h1>
           </div>
           </div>
 <body style="text-align:center">
